--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(90deg, rgba(52,118,19,1) 0%, rgba(36,121,9,1) 35%, rgba(0,212,255,1) 100%);
+
 }
 
 code {
