Add Search comment for empty robos

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -9,3 +9,12 @@
         {
             font-family: "Super Mario 256 Regular";
         }
+        .notFound 
+        {
+            text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 60px;
+        }
